[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "dict2css"
version = "0.2.3"
description = "A μ-library for constructing cascading style sheets from Python dictionaries."
readme = "README.rst"
keywords = [ "css",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/dict2css"
"Issue Tracker" = "https://github.com/sphinx-toolbox/dict2css/issues"
"Source Code" = "https://github.com/sphinx-toolbox/dict2css"
Documentation = "https://dict2css.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
